2000-07-06  MIYOSHI Masanori  <miyoshi@ask.ne.jp>

	* 00readme.w32.jis: New file for Windows users.

2000-07-05  Hideyuki SHIRAI  <shirai@quickhack.net>

	* ChangeLog (toplevel): Change my email-address to "quickhack".
	* 00changes.jp (toplevel): Ditto.
	* emacs/mhc-calendar.el (toplevel): Ditto.
	* emacs/mhc-cvs.el (toplevel): Ditto.
	* emacs/mhc-mew.el (toplevel): Ditto.
	* emacs/mhc-sync.el (toplevel): Ditto.

2000-07-04  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc-guess.el (mhc-guess-date-regexp-list): Added workaround
	for zenkaku-space.

	* emacs/mhc-wl.el (mhc-wl-exit-buffer): New buffer local variable.
	(mhc-wl-generate-summary-buffer): Set `mhc-wl-exit-buffer'.
	(mhc-wl-summary-exit): New function.
	(toplevel): Eliminated `summary-search-date' setting.

2000-07-04  MIYOSHI Masanori  <miyoshi@hrl.hitachi.co.jp>

	* emacs/00usage.jis: Fix a typo.

	* 00usage.jis: Ditto.

2000-07-03  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc.el (mhc-modify-file): Fixed problem when file is already
	opened.

	* emacs/mhc-summary.el (mhc-summary/insert-dayinfo):
	Set `mhc-tmp-private'if `hide-private' mode.
	(mhc-summary-make-todo-list): Ditto.
	(mhc-summary-line-format-alist): Follow-up.
	(mhc-summary-todo-line-format-alist): Ditto.
	(mhc-summary/line-subject-string): Ditto.
	(mhc-summary/line-location-string):
	Don't display location when `hide-private' mode.

	* emacs/mhc-xmas.el (mhc-put-icon): Fix problem
	when glyph extent already exists.

	* icons/Party.xbm, icons/Party.xpm: New files.

	* emacs/mhc-bm.el (mhc-bm-icon-alist): New variable.
	(Renamed from mhc-bm-category-icon-alist.)
	All other related portions are changed.
	(toplevel): Put CVS date keyword.

	* emacs/mhc-xmas.el (mhc-xmas-icon-alist): New variable.
	(Renamed from mhc-xmas-category-icon-alist.)
	All other related portions are changed.
	(toplevel): Put CVS date keyword.

	* emacs/mhc-summary.el (mhc-summary-line-format-alist):	Quote
	PROP-TYPE.